<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.the111minutes.e_c_p.hw4.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_layout_text" />

        <Button
            android:id="@+id/btn_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout1_name" />

        <Button
            android:id="@+id/btn_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout2_name" />

        <Button
            android:id="@+id/btn_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/layout3_name" />

        <Button
            android:id="@+id/btn_layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/layout4_name" />

        <Button
            android:id="@+id/btn_layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/layout5_name" />

        <Button
            android:id="@+id/btn_layout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/layout6_name" />

        <Button
            android:id="@+id/btn_layout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/layout7_name" />

        <Button
            android:id="@+id/btn_layout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/layout8_name" />

    </LinearLayout>

</RelativeLayout>
