<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_no_padding"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.the111minutes.e_c_p.hw4.Activity_1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/colorCalcTop"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/rad_text"
            android:textColor="@color/radColor" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/colorCalcTop"
            android:src="@drawable/ic_action_navigation_more_vert" />

    </RelativeLayout>

    <!-- All Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!-- Numeric buttons, all rows-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/calcMainBtnBackg"
            android:orientation="vertical">

            <!-- First row -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    style="@style/CalcButtonMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_btn_7"/>

                <Button
                    style="@style/CalcButtonMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_btn_8" />

                <Button
                    style="@style/CalcButtonMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_btn_9" />
            </LinearLayout>

            <!-- Second row -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    style="@style/CalcButtonMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_btn_4" />

                <Button
                    style="@style/CalcButtonMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_btn_5" />

                <Button
                    style="@style/CalcButtonMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_btn_6" />
            </LinearLayout>

            <!-- Third row -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    style="@style/CalcButtonMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_btn_1" />

                <Button
                    style="@style/CalcButtonMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_btn_2" />

                <Button
                    style="@style/CalcButtonMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_btn_3" />
            </LinearLayout>

            <!-- 4th row -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    style="@style/CalcButtonMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_btn_comma" />

                <Button
                    style="@style/CalcButtonMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_btn_0" />

                <Button
                    style="@style/CalcButtonMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_btn_equals" />
            </LinearLayout>

        </LinearLayout>

        <!-- Operator buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/calcOperatorBtnBackg"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                style="@style/CalcButtonOperatorsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calc_btn_del" />

            <Button
                style="@style/CalcButtonOperatorsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calc_btn_div" />


            <Button
                style="@style/CalcButtonOperatorsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calc_btn_mult" />


            <Button
                style="@style/CalcButtonOperatorsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calc_btn_minus" />


            <Button
                style="@style/CalcButtonOperatorsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calc_btn_plus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/calcDrawerBackg" />
    </LinearLayout>

</LinearLayout>